k8s/apps/forgejo-system/forgejo/runner/jobs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo-runners
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
