k8s/apps/forgejo-system/forgejo/runner/jobs/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-runner-jobs
  namespace: forgejo-runners
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
